--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.2",
     "grunt-contrib-htmlmin": "^2.1.0",
     "grunt-contrib-imagemin": "^1.0.1",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-html-build": "^0.6.1",
     "grunt-myth": "^1.1.0",
+    "grunt-sass": "^2.0.0",
     "jit-grunt": "^0.10.0",
     "load-grunt-config": "^0.19.2"
   }
